# qr-decoder

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
